--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,13 @@ jobs:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+     - name: Checkout
+        uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 2
       # Deploy to cPanel
-      - name: FTP-Deploy-Action
-        uses:  SamKirkland/FTP-Deploy-Action@4.0.0
+        - name: FTP Deploy
+          uses: SamKirkland/FTP-Deploy-Action@v4.3.5  
         with:
           ftp-server: ${{ secrets.FTP_SERVER }}
           ftp-username: ${{ secrets.FTP_USERNAME }}
