--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         - name: FTP Deploy
           uses: SamKirkland/FTP-Deploy-Action@v4.3.5
           with:
-            server: ${{ secrets.FTP_SERVER }}
-            username: ${{ secrets.FTP_USERNAME }}
-            password: ${{ secrets.FTP_PASSWORD }}
+            ftp-server: ${{ secrets.FTP_SERVER }}
+            ftp-username: ${{ secrets.FTP_USERNAME }}
+            ftp-password: ${{ secrets.FTP_PASSWORD }}
       
