--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           fetch-depth: 2
       # Deploy to cPanel
-        - name: FTP Deploy
+        - name: FTP-Deploy-Action
           uses: SamKirkland/FTP-Deploy-Action@v4.3.5
           with:
             ftp-server: ${{ secrets.FTP_SERVER }}
