--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         with:
           fetch-depth: 2
       # Deploy to cPanel
-        - name: FTP-Deploy-Action
-          uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-          with:
-            ftp-server: ${{ secrets.FTP_SERVER }}
-            ftp-username: ${{ secrets.FTP_USERNAME }}
-            ftp-password: ${{ secrets.FTP_PASSWORD }}
+      - name: FTP-Deploy-Action
+        uses:  SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          ftp-server: ${{ secrets.FTP_SERVER }}
+          ftp-username: ${{ secrets.FTP_USERNAME }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
       
